--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -23,6 +23,8 @@ p {
 	margin: 20px 0;
 	color:#000000;
 	text-align: left;
+	font-size: 1.2em;
+	line-height: 1.8em;
 }
 
 /*COLOR PALLETE*/
