--- a/styles/header.css
+++ b/styles/header.css
@@ -10,6 +10,7 @@ nav {
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index: 2;
 }
 
 nav a {
@@ -19,6 +20,7 @@ nav a {
 	display: block;
 	text-decoration: none;
 	padding: 10px 20px;
+	z-index: 2;
 }
 
 nav a:hover {
