--- a/styles/parrallax.css
+++ b/styles/parrallax.css
@@ -1,7 +1,4 @@
-/*.wrapper {
-  width: 50%;
-  margin: 0 auto;
-}*/
+
 .fs {
   height: 100vh;
 }
@@ -19,27 +16,13 @@
   color:#ffffff;
 }
 
-/*.slide .wrapper {
-padding-top: 30px;
-text-align: center;
-position: relative;
-z-index: 2; 
-}*/
-
 .bcg {
-/*transform: matrix(1,0,0,1,0,0);
-background: no-repeat center center;
-background-size: cover;
-position: absolute;
-width: 100%;
-height: 100%;
-z-index: 1;*/
   background: no-repeat center center;
   background-size: cover;
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 0;
   opacity: 0.5;     
 }
 
@@ -67,7 +50,7 @@ background-size: cover;
 .header-container .wrapper {
   position: relative;
   padding-top: 120px;
-  z-index: 2;
+  /*z-index: 2;*/
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -120%);
@@ -86,19 +69,8 @@ bottom: 10%;
 }
 #slide03 .wrapper {
 position: absolute;
-bottom: 10%; 
+bottom: 50%; 
 }
-
-/*CONTENT BLOCK*/
-/*.wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -120%);
-  margin: 0;
-  padding: 0;
-  z-index: 2;
-}*/
 
 /* Content Block */
 .content-block {
@@ -107,40 +79,6 @@ bottom: 10%;
   padding: 50px 0;
 }
 .content-block .wrapper {
-/*  width: 50%;
-  margin: 0 10%; 
-  visibility: visible;
-  opacity: 1;
-  transform: translate3d(0, 0, 0);
-  text-align: center;*/
-
   text-align: center; 
 }
-/*.no-touch .content-block .wrapper {
-  visibility: hidden;
-  opacity: 0; 
-}
-.no-touch .content-block.is-active .wrapper {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); 
-}*/
-
-
-/* =Simple animation up */
-/*.no-touch .slideInUp {
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.7s ease-out;
-          transition: all 0.7s ease-out;
-  -webkit-transform: translate3d(0, 50px, 0);
-  transform: translate3d(0, 50px, 0); 
-}
-.no-touch .is-active .slideInUp {
-  visibility: visible;
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); 
-}*/
 
